# Numerical-methods-heat-equation

./: CALERF.cpp  CALERF.h  CMakeLists.txt  README.md  analytical.cpp  analytical.h  explicit.cpp  explicit.h  implicit.cpp  implicit.h  linalg.cpp  linalg.h  main.cpp  output.cpp  output.h  params.h  solver.cpp  solver.h  utils.cpp  utils.h
